create pin post section

--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,4 +1,25 @@
 ﻿@font-face {
+	font-family: Vazir;
+	font-style: normal;
+	font-weight: normal;
+	src: url('../fonts/Vazir.eot');
+	src: url('../fonts/Vazir.eot?#iefix') format('embedded-opentype'), 
+	url('../fonts/Vazir.woff2') format('woff2'), 
+	url('../fonts/Vazir.woff') format('woff'), 
+	url('../fonts/Vazir.ttf') format('truetype');
+}
+@font-face {
+	font-family: Vazir;
+	font-style: normal;
+	font-weight: bold;
+	src: url('../fonts/Vazir-Bold.eot');
+	src: url('../fonts/Vazir-Bold.eot?#iefix') format('embedded-opentype'), 
+	url('../fonts/Vazir-Bold.woff2') format('woff2'), 
+	url('../fonts/Vazir-Bold.woff') format('woff'), 
+	url('../fonts/Vazir-Bold.ttf') format('truetype');
+}
+
+@font-face {
 	font-family: 'BBadr';
 	src: url('../fonts/BBadr.eot?#') format('eot'), /* IE6â€“8 */url('../fonts/BBadr.woff') format('woff'), /* FF3.6+, IE9, Chrome6+, Saf5.1+*/url('../fonts/BBadr.ttf') format('truetype'); /* Saf3â€”5, Chrome4+, FF3.5, Opera 10+ */
 }
