--- a/public/global.css
+++ b/public/global.css
@@ -7,16 +7,18 @@
 	padding: 0;
 }
 ::-webkit-scrollbar {
-	background: rgb(247,166,60);
-background: linear-gradient(180deg, rgba(247,166,60,1) 33%, rgba(9,121,99,1) 48%, rgba(39,167,249,1) 100%);
+	background: #a5a5a5;
 	display: block;
 	width: 8px;
+}
+a:visited , a:active{
+	text-decoration: none;
 }
 ::-webkit-scrollbar-track {
     background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: gray;
+    background-color: #636363;
     border-right: none;
     border-left: none;
 }
@@ -34,13 +36,13 @@ background: linear-gradient(180deg, rgba(247,166,60,1) 33%, rgba(9,121,99,1) 48%
 	margin-top: 15%;
 }
 /* ----End Loading Settings --- */
-
+/*  #f3f2f2 */
 html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	font-family: 'Vazir', Arial, sans-serif;
-	background: #cccccc;
+	font-family: 'Vazir', 'BYekan', sans-serif;
+	background: #f3f2f2  ;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -53,32 +55,111 @@ body {
 .nav-item{
 	padding: 0 1px;
 	font-size: 20px;
+	
 }
-.li-item-color{
-	color: white;
-}
-.li-item-color:hover{
-	text-decoration: none;
-	color: gray;
+header{
+	position: fixed;right: 0;left: 0;height: 65px;
+	background-color: white;
 }
 .brand-icon{
-	width: 60px;
+	width: 45px; 
+	height: 45px;
+	margin-top: 10px;
+	margin-right: 0;
 }
 .navbar{
-	background: rgb(28,27,27);
-	background: linear-gradient(360deg, rgba(28,27,27,0.9528186274509804) 0%, rgba(6,0,0,0.958420868347339) 54%);
-	box-shadow: 0 10px 10px #242121;
+	background: white;
+	border-bottom: 1px solid #bfbfbf;
+	height: 60px;
+	color: red;
 }
 .brand-icon-custome , .brand-icon-custome:hover{
 	text-decoration: none;
+	font-size: 17px;
+	direction: rtl;
 	color: red;
-	font-size: 250%;
-	margin-top: -10px;
-	font-family: 'Bowlby One', cursive;
-	margin-top: 0.5%;
+	font-family: vazir;
+	margin-top: 26%;
 	float: left;
 }
+.menu-item{
+	font-size: 12px;
+	font-family: vazir;
+	white-space: nowrap;
+	text-align: center;
+	cursor: pointer;
+}
+.menu-icon{
+	font-size: 20px;
+	cursor: pointer;
 
+}
+.menu-item-link-color{
+	color: #444343;
+	transition: all 0.3s;
+}
+.menu-item-link-color:hover{
+	color: #646464;
+}
+.col-12 .row .col-1{
+	width: 50px;
+}
+/*   */
+.modal.left .modal-dialog {
+	position:fixed;
+	right: 0;
+	margin: auto;
+	width: 320px;
+	height: 100%;
+	-webkit-transform: translate3d(0%, 0, 0);
+	-ms-transform: translate3d(0%, 0, 0);
+	-o-transform: translate3d(0%, 0, 0);
+	transform: translate3d(0%, 0, 0);
+}
+
+.modal.left .modal-content {
+	height: 100%;
+	overflow-y: auto;
+}
+
+.modal.right .modal-body {
+	padding: 15px 15px 80px;
+}
+
+.modal.right.fade .modal-dialog {
+	left: -320px;
+	-webkit-transition: opacity 0.3s linear, left 0.3s ease-out;
+	-moz-transition: opacity 0.3s linear, left 0.3s ease-out;
+	-o-transition: opacity 0.3s linear, left 0.3s ease-out;
+	transition: opacity 0.3s linear, left 0.3s ease-out;
+}
+
+.modal.right.fade.show .modal-dialog {
+	right: 0;
+}
+
+/* ----- MODAL STYLE ----- */
+.modal-content {
+	border-radius: 0;
+	border: none;
+}
+
+.modal-header {
+	border-bottom-color: #eeeeee;
+	background-color: #fafafa;
+}
+
+/* ----- v CAN BE DELETED v ----- */
+@media (max-width:767px){
+	.brand-icon-custome , .brand-icon-custome:hover{
+		text-decoration: none;
+		color: red;
+		display: none;
+		font-family: 'Bowlby One', cursive;
+		margin-top: 0.5%;
+		float: left;
+	}
+}
 @media (max-width:992px){
 	.brand-text{
 		position: absolute;
@@ -88,56 +169,13 @@ body {
 		font-size:60px;
 	}
 }
-@media (min-width:992px){
-	.text-header-custom h1{
-		font-size:100px;
+@media(max-width:1225px){
+	.brand-icon-custome{
+		display: none;
 	}
-}
-@media (min-width:767px){
-	.my-btn{
-		text-align: center;
+	.brand-icon{
+		margin: auto;
 	}
-}
-.header-image{
-	width: 100%;
-	background-image: url("header.jpg");
-	box-sizing: border-box;
-	background-origin: cover;
-	background-repeat: no-repeat;
-	
-	
-}
-.text-header-custom{
-	text-align: center;
-	color: white;
-	
-}
-.header-image h1{
-	text-shadow: 0 10px 8px black;
-	font-weight: bold;
-	padding: 50px;
-	
-}
-.header-image p{
-	text-align: center ;
-	direction: rtl;
-	margin-top: 20px;
-	
-}
-.my-btn{
-	background-color: none;
-	border: 3px solid yellow;
-	text-align: center;
-	font-size: 20px;
-	color: yellow;
-	font-family: BYekan;
-	transition: all 0.5s;
-	margin-bottom: 75px;
-}
-.my-btn:hover{
-	color: black;
-	background-color: yellow;
-
 }
 .my-icon {
 	border-radius: 50%;
@@ -190,7 +228,7 @@ body {
 
 /******* Inolinx Article Pin Up site Under Navbar ******/
 .pin-parent{
-	margin-top: 130px;
+	margin-top: 50px;
 }
 .pin-article-main article{
 	position: relative;
@@ -334,6 +372,22 @@ a,a:hover{
 	color: white;
 	font-size: 13px;
 }
+.shadow-radius-section{
+	border-radius: 7px;
+	border:1.5px solid #b5b5b578;
+	background-color: #f3f2f2;
+}
+.shadow-section{
+	transition: all 0.5s;
+}
+.main-article{
+	direction: rtl;
+	margin-right: 0;
+	background-color: #f3f2f2 ;
+}
+.shadow-section:hover{
+	box-shadow: 0 0 20px 1px #d6d1d1;
+}
 @media(max-width:1200px){
 	.pin-article-main article{
 		height: 60vh;
@@ -349,6 +403,150 @@ a,a:hover{
 		box-shadow: 0 0 50px 70px #161616;
 		padding-bottom: 10px;
 	}
-	
+}
+/* start post article */
+.cu-image{
+	width: 55px;
+	height: 55px;
+	border-radius: 50%;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: all 0.4s;
+	overflow: hidden;
+	border:1.5px solid #b5b5b578;
+
+}
+.cu-image-com{
+	width: 55px;
+	height: 55px;
+	border-radius: 4px;	
+	cursor: pointer;
+	transition: all 0.4s;
+	overflow: hidden;
+	border:1.5px solid #b5b5b578;
+}
+.cu-intro h6 a{
+	font-weight: bold;
+	margin-top: 2px;
+	font-size: 14px;
+	color: #303030;
+}
+.show-time-custome{
+	color: gray;
+	font-size: 13px;
+}
+.title-post{
+	background-color: #e2e2e2;
+	font-size: 18px;
+	font-weight:bold;
+	line-height: 30px;
+}
+.title-post a{
+	color: #292B2C;
+}
+.post-text{
+	text-align: justify;
+	direction: rtl;
+	font-weight: normal;
+	font-size: 13.5px;
+	line-height: 25px;
+	word-spacing: -1px;
+}
+.personal-img{
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	border: 1px solid #b5b5b578;
+}
+.personal-name{
+	font-size: 12px;
+	color: rgb(49, 49, 49);
+	display: inline-block;
+}
+.a-clicked:focus ,.a-clicked:active ,.a-clicked:visited{
+	text-decoration: none;
+}
+.ellipsis-menu{
+	direction: rtl;
+	width: 150px;
+	border-radius: 10px;
+	border: solid 1px #b5b5b578;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
+
+}
+.ellipsis-menu li {
+	text-align: right;
+	margin-right: 10px;
+	height: 30px;
+}
+.ellipsis-menu li a{
+	text-decoration: none;
+	color: black;
+	font-size: 13px;
+}
+.view-count{
+	font-size: 12px;
+	color: rgb(49, 49, 49);
+	display: inline-block;
+	padding-top:2px ;
 	
 }
+.company-img{
+	width: 130px;
+	height: 130px;
+}
+
+.post-content{
+	position: absolute;
+	top: 150px;
+}
+.main-post-div{
+	position: absolute;
+	top: 150px;
+}
+.dream-job-image{
+	height: 230px;
+}
+.header-image-main{
+	position: relative;
+}
+.header-logo-image{
+	position: absolute;
+	width: 100px;
+	height: 100px;
+	z-index: 2;
+	top: -55px;
+	right: 25px;
+	border: 2px solid rgb(119, 119, 119);
+}
+.header-image{
+	height: 135px;
+	border-radius: 7px 7px 0 0;
+}
+.header-detail{
+	direction: rtl;
+	margin: 55px 50px 70px -13px;
+}
+.text-bold{
+	font-weight: bold;
+}
+.explain-about-page{
+	line-height: 23px;
+	text-align: justify;
+	word-spacing: -1.5px;
+}
+.font{
+	font-family: vazir;
+}
+#more , #read-more {display: none;font-family: vazir;}
+@media(max-width:1800px){
+	.cu-intro{
+		margin-right: 2%;
+	}
+}
+@media(min-width:1440px){
+	.responsive-imagePost-height{
+		height: 373.7px;
+	}
+}
+/* start post article */
