--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -18,7 +18,35 @@
 	url('../fonts/Vazir-Bold.woff') format('woff'), 
 	url('../fonts/Vazir-Bold.ttf') format('truetype');
 }
-
+@font-face {
+	font-family: Samim;
+	src: url('../fonts/Samim.eot');
+	src: url('../fonts/Samim.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/Samim.woff2') format('woff2'),
+		 url('Samim.woff') format('woff'),
+		 url('../fonts/Samim.ttf') format('truetype');
+	font-weight: normal;
+  }
+  
+  @font-face {
+	font-family: Samim;
+	src: url('../fonts/Samim-Bold.eot');
+	src: url('../fonts/Samim-Bold.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/Samim-Bold.woff2') format('woff2'),
+		 url('../fonts/Samim-Bold.woff') format('woff'),
+		 url('../fonts/Samim-Bold.ttf') format('truetype');
+	font-weight: bold;
+  }
+  
+  @font-face {
+	font-family: Samim;
+	src: url('../fonts/Samim-Medium.eot');
+	src: url('../fonts/Samim-Medium.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/Samim-Medium.woff2') format('woff2'),
+		 url('../fonts/Samim-Medium.woff') format('woff'),
+		 url('../fonts/Samim-Medium.ttf') format('truetype');
+	font-weight: 500;
+  }
 @font-face {
 	font-family: 'BBadr';
 	src: url('../fonts/BBadr.eot?#') format('eot'), /* IE6â€“8 */url('../fonts/BBadr.woff') format('woff'), /* FF3.6+, IE9, Chrome6+, Saf5.1+*/url('../fonts/BBadr.ttf') format('truetype'); /* Saf3â€”5, Chrome4+, FF3.5, Opera 10+ */
