--- a/public/global.css
+++ b/public/global.css
@@ -540,11 +540,10 @@ a:hover {
     width: 55px;
     height: 55px;
     border-radius: 50%;
-    border-radius: 4px;
     cursor: pointer;
     transition: all 0.4s;
     overflow: hidden;
-    border: 1.5px solid #b5b5b578;
+    border: 2px solid #b5b5b578;
 }
 
 .cu-image-com {
@@ -737,6 +736,24 @@ a:hover {
     line-height: 0px;
 }
 
+.btn-mw-profile {
+    background-color: #ff9d2e;
+    color: blanchedalmond;
+    font-size: 100%;
+    width: auto;
+    height: 30px;
+    line-height: 0px;
+}
+
+.btn-mw-scroll-profile {
+    background-color: #ff9d2e;
+    color: blanchedalmond;
+    font-size: 14px;
+    width: auto;
+    height: 30px;
+    line-height: 0px;
+}
+
 .pt-custome-more-btn {
     padding-top: 4px;
 }
@@ -773,14 +790,105 @@ a:hover {
     font-size: 20px;
 }
 
+.text-logo-scroll-profile {
+    font-weight: bold;
+    font-size: 17px;
+}
+
 .explain-about-page {
     line-height: 23px;
     text-align: justify;
     word-spacing: -1.5px;
 }
 
+.explain-about-page-scroll {
+    line-height: 10px;
+    font-size: 11px;
+    text-align: justify;
+    word-spacing: -1.5px;
+    font-weight: normal;
+}
+
 .font {
     font-family: vazir;
+}
+
+@media(max-width:425px) {
+    .banner {
+        border-radius: 7px 7px 0 0;
+        padding-right: 0px !important;
+        overflow: hidden;
+    }
+    .header-image-person {
+        width: 100%;
+        height: 100%;
+        border-radius: 7px 7px 0 0;
+    }
+    .header-logo-image-person {
+        position: absolute;
+        width: 22%;
+        height: auto;
+        z-index: 2;
+        top: -42px;
+        right: 30px;
+        border: 2px solid rgb(204 203 203);
+    }
+    .header-detail {
+        direction: rtl;
+        margin: 12% 50px 0px -13px;
+    }
+}
+
+@media(min-width:425px) {
+    .banner {
+        border-radius: 7px 7px 0 0;
+        padding-right: 0px !important;
+        overflow: hidden;
+    }
+    .header-image-person {
+        width: 100%;
+        height: 120px;
+        border-radius: 7px 7px 0 0;
+    }
+    .header-logo-image-person {
+        position: absolute;
+        width: 100px;
+        height: auto;
+        z-index: 2;
+        top: -60px;
+        right: 30px;
+        border: 2px solid rgb(204 203 203);
+    }
+    .header-detail {
+        direction: rtl;
+        margin: 55px 50px 0px -13px;
+    }
+}
+
+@media(min-width:1024px) {
+    .banner {
+        border-radius: 7px 7px 0 0;
+        padding-right: 0px !important;
+        overflow: hidden;
+    }
+    .header-image-person {
+        width: 100%;
+        height: 150px;
+        border-radius: 7px 7px 0 0;
+    }
+    .header-logo-image-person {
+        position: absolute;
+        width: 100px;
+        height: auto;
+        z-index: 2;
+        top: -60px;
+        right: 30px;
+        border: 2px solid rgb(204 203 203);
+    }
+    .header-detail {
+        direction: rtl;
+        margin: 55px 50px 0px -13px;
+    }
 }
 
 #more,
@@ -817,6 +925,13 @@ a:hover {
     border: 1px solid rgb(141, 141, 141);
     width: 35px;
     height: 35px;
+}
+
+.logo-cu-scroll-profile {
+    border: 1px solid rgb(141, 141, 141);
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
 }
 
 .scroll-main-height {
