--- a/public/global.css
+++ b/public/global.css
@@ -821,6 +821,35 @@ a:hover {
     }
     .header-image-person {
         width: 100%;
+        height: 95px;
+        border-radius: 7px 7px 0 0;
+    }
+    .header-logo-image-person {
+        position: absolute;
+        width: 22%;
+        height: auto;
+        z-index: 2;
+        top: -42px;
+        right: 30px;
+        border: 2px solid rgb(204 203 203);
+    }
+    .header-detail {
+        direction: rtl;
+        margin: 12% 50px 0px -13px;
+    }
+    .text-font-size {
+        font-size: 18px;
+    }
+}
+
+@media(min-width:425px) {
+    .banner {
+        border-radius: 7px 7px 0 0;
+        padding-right: 0px !important;
+        overflow: hidden;
+    }
+    .header-image-person {
+        width: 100%;
         height: 100%;
         border-radius: 7px 7px 0 0;
     }
