provide for depoly

--- a/public/global.css
+++ b/public/global.css
@@ -593,6 +593,7 @@ a:hover {
 
 .report.navbar {
     border: none !important;
+    background: transparent !important;
     display: block;
     height: auto;
     color: black;
