--- a/public/global.css
+++ b/public/global.css
@@ -284,8 +284,22 @@ header {
 
 /******* Inolinx Article Pin Up site Under Navbar ******/
 
-.pin-parent {
-    margin-top: 50px;
+@media(max-width:768px) {
+    .pin-parent {
+        margin-top: -3px;
+    }
+}
+
+@media(min-width:768px) {
+    .pin-parent {
+        margin-top: 20px;
+    }
+}
+
+@media(min-width:1024px) {
+    .pin-parent {
+        margin-top: 50px;
+    }
 }
 
 .pin-article-main article {
@@ -846,6 +860,20 @@ a:hover {
         border-radius: 7px 7px 0 0;
     }
     .header-logo-image-person {
+        position: absolute;
+        width: 22%;
+        height: auto;
+        z-index: 2;
+        top: -42px;
+        right: 30px;
+        border: 2px solid rgb(204 203 203);
+    }
+    .header-image {
+        width: 100%;
+        height: 95px;
+        border-radius: 7px 7px 0 0;
+    }
+    .header-logo-image {
         position: absolute;
         width: 22%;
         height: auto;
