--- a/public/global.css
+++ b/public/global.css
@@ -286,7 +286,7 @@ header {
 
 @media(max-width:768px) {
     .pin-parent {
-        margin-top: -3px;
+        margin-top: -1px;
     }
 }
 
@@ -1491,6 +1491,92 @@ a:hover {
 
 @media(max-width:768px) {}
 
-@media(max-width:768px) {}
+@media(max-width:1024px) {}
 
-@media(max-width:768px) {}
+@media(max-width:1440px) {}
+
+
+/* Footer */
+
+footer {
+    font-family: ' BYekan';
+    bottom: 0;
+    width: 100%;
+    height: 270px;
+}
+
+@media (max-width:767px) {
+    .footer {
+        height: 570px;
+    }
+}
+
+@media (min-width: 767px) {
+    .footer {
+        height: 300px;
+    }
+}
+
+
+/* Sticky footer style and color
+-------------------------------------------------- */
+
+footer {
+    font-family: vazir !important;
+    padding-top: 30px;
+    background-color: #F3F2F2;
+    color: #444444;
+}
+
+footer a {
+    color: #444444;
+    text-decoration: none;
+}
+
+footer a:hover,
+footer a:focus {
+    color: #444444;
+    text-decoration: none;
+    border-bottom: 1px dotted #999;
+}
+
+footer .form-control {
+    background-color: #fdfdfd;
+    outline: 1px solid rgb(207, 207, 207);
+    border-radius: 5px;
+    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
+    border: none;
+    resize: none;
+    color: #444444;
+    padding: 0.7em 1em;
+}
+
+footer .form-group {
+    margin-bottom: 25px;
+}
+
+.footer i {
+    font-size: 35px;
+}
+
+.footer textarea,
+.footer button,
+.footer input {
+    font-family: vazir !important;
+    text-align: right;
+}
+
+.footer .btn {
+    background-color: #26A6F9;
+    color: white;
+}
+
+.footer .nav-link {
+    color: #00b2ff;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.footer .nav-link:hover {
+    color: #ff9d2e;
+}
