provide for depoly

--- a/public/global.css
+++ b/public/global.css
@@ -665,18 +665,19 @@ a:hover {
 .ellipsis-menu {
     direction: rtl;
     width: 150px;
-    border-radius: 10px;
+    border-radius: 5px;
     border: solid 1px #b5b5b578;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
 }
 
 .ellipsis-menu li {
     text-align: right;
-    margin-right: 10px;
+    margin-right: 0px;
     height: 30px;
 }
 
 .ellipsis-menu li a {
+    padding-right: 10px;
     text-decoration: none;
     color: black;
     font-size: 13px;
@@ -1443,7 +1444,7 @@ a:hover {
 
 @media(max-width:313px) {
     .custome-margin-right {
-        padding-right: 1% !important;
+        padding-right: 8px !important;
     }
     .custom-width {
         width: 15px !important;
@@ -1461,6 +1462,7 @@ a:hover {
 @media(max-width:320px) {
     .custome-margin-right {
         margin-right: 1% !important;
+        padding-right: 8px !important;
     }
     .row .col-10 .text-secondary {
         line-height: 22px;
@@ -1487,13 +1489,101 @@ a:hover {
     }
 }
 
-@media(max-width:425px) {}
+@media(min-width:375px) {
+    .custome-margin-right {
+        margin-right: 19px !important;
+    }
+}
 
-@media(max-width:768px) {}
+@media(min-width:425px) {
+    .custome-margin-right {
+        margin-right: 1.5% !important;
+    }
+}
 
-@media(max-width:1024px) {}
+@media(min-width:500px) {
+    .custome-margin-right {
+        padding-right: 0px !important;
+        margin-right: 0px !important;
+    }
+}
 
-@media(max-width:1440px) {}
+@media(min-width:565px) {
+    .custome-margin-right {
+        padding-right: 0px !important;
+        margin-right: -10px !important;
+    }
+}
+
+@media(min-width:575px) {
+    .custome-margin-right {
+        padding-right: 5px !important;
+        margin-right: 19px !important;
+    }
+}
+
+@media(min-width:705px) {
+    .custome-margin-right {
+        padding-right: 5px !important;
+        margin-right: 10px !important;
+    }
+}
+
+@media(min-width:768px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 30px !important;
+    }
+}
+
+@media(min-width:850px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 25px !important;
+    }
+}
+
+@media(min-width:1024px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 20px !important;
+    }
+}
+
+@media(min-width:1200px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 15px !important;
+    }
+}
+
+@media(min-width:1250px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 10px !important;
+    }
+}
+
+@media(min-width:1320px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 9px !important;
+    }
+}
+
+@media(min-width:1440px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 0px !important;
+    }
+}
+
+@media(min-width:1640px) {
+    .custome-margin-right {
+        padding-right: 10px !important;
+        margin-right: 15px !important;
+    }
+}
 
 
 /* Footer */
@@ -1587,7 +1677,7 @@ footer .copyright a {
 }
 
 footer .copyright a:hover {
-    color: #ff9d2e;
+    color: #0073b1;
 }
 
 .footer textarea,
