--- a/public/global.css
+++ b/public/global.css
@@ -127,7 +127,24 @@ header {
     white-space: nowrap;
     text-align: center;
     cursor: pointer;
-    margin-right: 20px;
+}
+
+@media(min-width:500px) {
+    .col-custom {
+        max-width: 300px !important;
+    }
+}
+
+@media(min-width:768px) {
+    .col-custom {
+        max-width: 700px !important;
+    }
+}
+
+@media(min-width:850px) {
+    .col-custom .menu-main-element .col-2 {
+        max-width: 75px !important;
+    }
 }
 
 .menu-icon {
@@ -794,6 +811,33 @@ a:hover {
     padding-top: 4px;
 }
 
+@media(max-width:320px) {
+    .btn-mw {
+        background-color: #0080ff;
+        color: blanchedalmond;
+        font-size: 100%;
+        width: 100%;
+        height: 30px;
+        line-height: 0px;
+    }
+    .btn-mw-profile {
+        background-color: #ff9d2e;
+        color: blanchedalmond;
+        font-size: 100%;
+        width: 100% !important;
+        height: 30px;
+        line-height: 0px;
+    }
+    .visit-btn {
+        width: 100%;
+        margin: 8px 4% !important;
+    }
+    .vm-navbar {
+        padding-left: 0 !important;
+        margin-left: 0 !important;
+    }
+}
+
 .banner {
     border-radius: 7px 7px 0 0;
     padding-right: 1px !important;
@@ -1113,10 +1157,40 @@ a:hover {
     text-decoration: none;
 }
 
+.category_button-non {
+    display: block;
+    width: 10%;
+    margin-right: 30px;
+    background: #ff9d2e;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 400;
+    color: #fff;
+    position: relative;
+    padding: 2px;
+    text-decoration: none;
+}
+
 .category_button.collapsed {
     background: #fff;
     color: #bbb;
     width: 80%;
+}
+
+.category_button-non:before {
+    font-weight: 900;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #ff9d2e;
+    text-align: center;
+    position: absolute;
+    top: 0px;
+    right: -25px;
+    z-index: 1;
+    transition: all 0.3s ease 0s;
 }
 
 .category_button:before,
@@ -1430,6 +1504,10 @@ a:hover {
     border: none;
 }
 
+@media(max-width:767px) {}
+
+.mod1 {}
+
 @media(min-width:767px) {
     .modal-backdrop.show {
         opacity: 0;
@@ -1438,7 +1516,7 @@ a:hover {
         overflow: auto;
     }
     .modal-backdrop {
-        z-index: -1;
+        z-index: -10;
     }
 }
 
@@ -1456,6 +1534,7 @@ a:hover {
     }
     .explain-about-page {
         word-spacing: -2px;
+        text-align: right;
     }
 }
 
@@ -1469,10 +1548,7 @@ a:hover {
     }
     .explain-about-page {
         word-spacing: 0px;
-        text-align: justify;
-    }
-    .col-custom {
-        width: 136px !important;
+        text-align: right;
     }
 }
 
@@ -1485,7 +1561,7 @@ a:hover {
     }
     .explain-about-page {
         word-spacing: -1px;
-        text-align: justify;
+        text-align: right;
     }
 }
 
