--- a/public/global.css
+++ b/public/global.css
@@ -767,6 +767,56 @@ a:hover {
     border: 2px solid rgb(204 203 203);
 }
 
+.header-logo-image-person-sidebar {
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    z-index: 2;
+    top: -40px;
+    right: 0%;
+    left: 33%;
+    border: 2px solid rgb(204 203 203);
+}
+
+@media(max-width:800px) {
+    .header-logo-image-person-sidebar {
+        position: absolute;
+        width: 70px;
+        height: 70px;
+        z-index: 2;
+        top: -40px;
+        right: 0%;
+        left: 35%;
+        border: 2px solid rgb(204 203 203);
+    }
+}
+
+@media(max-width:992px) {
+    .header-logo-image-person-sidebar {
+        position: absolute;
+        width: 70px;
+        height: 70px;
+        z-index: 2;
+        top: -40px;
+        right: 0%;
+        left: 35%;
+        border: 2px solid rgb(204 203 203);
+    }
+}
+
+@media(min-width:992px) {
+    .header-logo-image-person-sidebar {
+        position: absolute;
+        width: 70px;
+        height: 70px;
+        z-index: 2;
+        top: -40px;
+        right: 0%;
+        left: 32%;
+        border: 2px solid rgb(204 203 203);
+    }
+}
+
 .border-radius {
     border-radius: 50%;
 }
@@ -859,6 +909,12 @@ a:hover {
     border-radius: 7px 7px 0 0;
 }
 
+.header-image-person-sidebar {
+    width: 100%;
+    height: 80px;
+    border-radius: 7px 7px 0 0;
+}
+
 .header-detail {
     direction: rtl;
     margin: 55px 50px 0px -13px;
@@ -881,6 +937,14 @@ a:hover {
 .explain-about-page {
     line-height: 23px;
     text-align: justify;
+    word-spacing: -1.5px;
+}
+
+.explain-about-page-sidebar {
+    line-height: 23px;
+    color: #475159;
+    font-size: 13px;
+    text-align: center;
     word-spacing: -1.5px;
 }
 
