--- a/public/global.css
+++ b/public/global.css
@@ -156,6 +156,12 @@ header {
     cursor: pointer;
 }
 
+@media(max-width:500px) {
+    .col-custom {
+        max-width: 300px !important;
+    }
+}
+
 @media(min-width:500px) {
     .col-custom {
         max-width: 300px !important;
@@ -867,6 +873,10 @@ a:hover {
     border: 2px solid rgb(204 203 203);
 }
 
+.border-custom-color {
+    border: 2px solid rgb(204 203 203);
+}
+
 .header-logo-image-person {
     position: absolute;
     width: 145px;
@@ -878,17 +888,13 @@ a:hover {
 }
 
 .header-logo-image-person-sidebar {
-    position: absolute;
     width: 70px;
     height: 70px;
-    z-index: 2;
-    top: -40px;
-    right: 0%;
-    left: 33%;
     border: 2px solid rgb(204 203 203);
 }
 
-@media(max-width:800px) {
+
+/* @media(max-width:800px) {
     .header-logo-image-person-sidebar {
         position: absolute;
         width: 70px;
@@ -925,13 +931,20 @@ a:hover {
         left: 32%;
         border: 2px solid rgb(204 203 203);
     }
-}
+} */
 
 .border-radius {
     border-radius: 50%;
 }
 
 .sticky-top-custom {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 80px;
+    z-index: 100
+}
+
+.sticky-top-show-detail-aside {
     position: -webkit-sticky;
     position: sticky;
     top: 80px;
@@ -1035,6 +1048,14 @@ a:hover {
     overflow: hidden;
 }
 
+.banner-sidebar {
+    width: 100%;
+    height: 60px;
+    border-radius: 7px 7px 0 0;
+    padding-right: 1px !important;
+    overflow: hidden;
+}
+
 .header-image {
     width: 820px;
     height: 135px;
@@ -1049,13 +1070,13 @@ a:hover {
 
 .header-image-person-sidebar {
     width: 100%;
-    height: 60px;
+    height: auto;
     border-radius: 7px 7px 0 0;
 }
 
 .header-detail {
     direction: rtl;
-    margin: 55px 50px 0px -13px;
+    margin: 10px 50px 0px -13px;
 }
 
 .text-bold {
@@ -1098,6 +1119,10 @@ a:hover {
     font-family: vazir;
 }
 
+.font-weight-normal {
+    font-weight: 600;
+}
+
 @media(max-width:425px) {
     .banner {
         border-radius: 7px 7px 0 0;
@@ -1132,10 +1157,10 @@ a:hover {
         right: 30px;
         border: 2px solid rgb(204 203 203);
     }
-    .header-detail {
+    /* .header-detail {
         direction: rtl;
         margin: 12% 50px 0px -13px;
-    }
+    } */
     .text-font-size {
         font-size: 18px;
     }
@@ -1161,10 +1186,10 @@ a:hover {
         right: 30px;
         border: 2px solid rgb(204 203 203);
     }
-    .header-detail {
+    /* .header-detail {
         direction: rtl;
         margin: 12% 50px 0px -13px;
-    }
+    } */
 }
 
 @media(min-width:425px) {
@@ -1187,10 +1212,10 @@ a:hover {
         right: 30px;
         border: 2px solid rgb(204 203 203);
     }
-    .header-detail {
+    /* .header-detail {
         direction: rtl;
         margin: 55px 50px 0px -13px;
-    }
+    } */
 }
 
 @media(min-width:1024px) {
@@ -1213,10 +1238,10 @@ a:hover {
         right: 30px;
         border: 2px solid rgb(204 203 203);
     }
-    .header-detail {
+    /* .header-detail {
         direction: rtl;
         margin: 55px 50px 0px -13px;
-    }
+    } */
 }
 
 .font-family {
@@ -2134,4 +2159,25 @@ input[type=number]:focus,
 
 .font-size-footer-sign {
     font-size: 12px;
+}
+
+
+/*  cahnge font sidebar   */
+
+@media(min-width:768px) {
+    .slogan,
+    .btn-sidebar,
+    .author-sidebar {
+        font-size: 14px;
+        line-height: 20px;
+    }
+}
+
+@media(min-width:1024px) {
+    .slogan,
+    .btn-sidebar,
+    .author-sidebar {
+        font-size: 15px;
+        line-height: 20px;
+    }
 }
