--- a/public/global.css
+++ b/public/global.css
@@ -1072,6 +1072,8 @@ a:hover {
 }
 
 .banner {
+    width: 100% !important;
+    height: 150px !important;
     border-radius: 7px 7px 0 0;
     padding-right: 1px !important;
     overflow: hidden;
@@ -1092,14 +1094,16 @@ a:hover {
 }
 
 .header-image-person {
-    width: 820px;
-    height: 190px;
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
     border-radius: 7px 7px 0 0;
 }
 
 .header-image-person-sidebar {
-    max-width: 250px;
-    max-height: 60px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 7px 7px 0 0;
 }
 
