provide for depoly

--- a/public/global.css
+++ b/public/global.css
@@ -715,11 +715,12 @@ a:hover {
 }
 
 .post-text {
+    padding: 0 25px !important;
     text-align: justify;
     direction: rtl;
     font-weight: normal;
     font-size: 13.5px;
-    line-height: 25px;
+    line-height: 27px;
     word-spacing: -1px;
 }
 
